	  Add function init_backup_dir() to handle relative paths
	  correctly, use get_full_path() to get the canonical pathname,
	  and use tail() to get the filename if get_full_path() fails.
	- Port to the Tandem NonStop Kernel (nsr-tandem-nsk). (Tom
	  Bates; minor tweaks by DLR)
- files.c:
  do_insertfile()
	- Wrap one reference to NANO_EXTCMD_KEY in a NANO_SMALL #ifdef.
	  (DLR)
  add_open_files()
	- Make the saving of marked status in open_files->file_flags
	  work properly again; a tweak to the ISSET() macro in 1.3.0
	  to make it only return 0 or 1 broke it. (DLR)
  write_marked()
	- New function used to write the current marked selection to a
	  file, split out from do_writeout(). (DLR)
  filestat()
	- Removed, as it is only called in one place and is
	  redundant. (DLR)
  do_browser()
	- Replace the filestat() call with an equivalent stat() call.
	  (DLR)
- global.c:
  shortcut_init()
	- Only allow verbatim input when we're not in view mode. (DLR)
	- Set the associated function for unjustify to 0 instead of
	  do_uncut_text(), since it's currently unused. (DLR)
- nano.c:
  usage()
	- Clarify the description for -T/--tabsize a bit. (DLR)
  do_verbatim_input()
	- Remove the now-unneeded code to disable XON, XOFF, and
	  suspend, since we now go into raw mode in
	  get_verbatim_kbinput() and bypass them. (DLR)
  do_int_speller(), do_alt_speller(), do_spell()
	- Modify to write only the current selection from a file to the
	  temporary file used for spell checking when the mark is on,
	  and add a few miscellaneous cosmetic cleanups. (DLR)
  do_int_spell_fix()
	- Store the value of current_x in a size_t instead of an int,
	  and add a few minor efficiency tweaks. (David Benbennick)
	- Remove comment explaining why findnextstr() is called with
	  bracket_mode set to TRUE even though we aren't doing a bracket
	  search, since after the above efficiency tweaks, it's now more
	  accurately called can_display_wrap. (DLR)
  signal_init()